[gd_scene load_steps=3 format=3 uid="uid://dlvbq7084ooba"]

[ext_resource type="Script" path="res://Win_Lose/win_lose.gd" id="1_s6qra"]
[ext_resource type="Texture2D" uid="uid://drr2x2b1ro8wx" path="res://UI/UI_Frame_256.png" id="1_ycowo"]

[node name="WinLose" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s6qra")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(720, 1280)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ycowo")
patch_margin_left = 20
patch_margin_top = 62
patch_margin_right = 20
patch_margin_bottom = 62
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="InputName" type="LineEdit" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
placeholder_text = "Enter your Name"
alignment = 1
max_length = 30
drag_and_drop_selection_enabled = false
caret_blink = true

[node name="Submit Score" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Submit
"

[node name="BTN_PlayAgain" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "  PLAY AGAIN  "

[node name="BTN_Exit" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "EXIT"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Submit Score" to="." method="_on_submit_score_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/BTN_PlayAgain" to="." method="_on_btn_play_again_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/BTN_Exit" to="." method="_on_btn_exit_pressed"]
